<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6b5b95"
    tools:context=".TextBoxActivity">

    <include
        android:id="@+id/Layout_stats"
        layout="@layout/fragment_header" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Layout_stats"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textbox_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:gravity="center_horizontal"
            android:text=""
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/textboxImageToIdentify"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="2"
            android:contentDescription="@string/image_related_to_question_subject"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/textbox_answerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/enter_answer_here"
            android:background="@drawable/option_rounded_corner"
            android:hint="@string/enter_answer_here"
            android:inputType="text"
            android:labelFor="@id/textbox_answerEditText"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="#ff7b25"
            android:onClick="submitTextAnswer"
            android:text="@string/submit"
            android:textColor="@android:color/black" />

    </LinearLayout>


</RelativeLayout>